objects/Opportunity_Lost_Product__c.object
<CustomObject>
    <description>C&amp;E Object</description>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <description>C&amp;E Reason on why the product item was lost</description>
        <inlineHelpText>Add a reason for why the Product item was lost</inlineHelpText>
        <label>Lost - Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stopped by Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stopped by Third party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stopped by us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Proposition</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Lost Products</relationshipLabel>
        <relationshipName>Lost_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Lost Products</relationshipLabel>
        <relationshipName>Lost_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Closed__c</fullName>
        <formula>IF(Opportunity__r.IsClosed, Total__c,0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total_Closed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Price__c  *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>no_of_lost_products__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>no of lost products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Lost Product</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Lost Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lost Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>